--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,131 @@
+/* Root Variables */
+:root {
+    --clr-primary: #7380ec;
+    --clr-danger: #ff7782;
+    --clr-success: #41f1b6;
+    --clr-white: #fff;
+    --clr-info-dark: #7d8da1;
+    --clr-info-light: #dce1eb;
+    --clr-dark: #363949;
+    --clr-warnig: #ff4edc;
+    --clr-light: rgba(132, 139, 200, 0.18);
+    --clr-primary-variant: #111e88;
+    --clr-dark-variant: #677483;
+    --clr-color-background: #ededed;
+
+    --card-border-radius: 2rem;
+    --border-radius-1: 0.4rem;
+    --border-radius-2: 0.8rem;
+    --border-radius-3: 1.2rem;
+
+    /* --card-padding: 1.8rem; */
+    --card-padding: 1.3rem;
+    /* --padding-1: 1.2rem; */
+    --box-shadow: 0 2rem 3rem var(--clr-light);
+
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    border: 0;
+    text-decoration: none !important;
+    list-style: none;
+    appearance: none;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    font-size: 0.7rem;
+    user-select: none;
+    overflow-x: hidden;
+    font-family: 'poppins', sans-serif;
+}
+
 .App {
-  text-align: center;
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* margin: 0 auto; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+    color: var(--clr-dark)
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+    font-weight: 800;
+    font-size: 2.8rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h2 {
+    font-size: 1.4rem;
 }
 
-.App-link {
-  color: #61dafb;
+h3 {
+    font-size: 0.8rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h4 {
+    font-weight: 0.8rem;
+}
+
+h5 {
+    font-size: 0.77rem;
+}
+
+small {
+    font-size: 0.75rem;
+}
+
+p {
+    color: var(--clr-dark-variant);
+}
+
+b {
+    color: var(--clr-dark);
+}
+
+.primary {
+    color: var(--clr-primary);
+}
+
+.sucess {
+    color: var(--clr-danger);
+}
+
+.warning {
+    color: var(--clr-warnig);
+}
+
+.text-muted {
+    color: var(--clr-info-dark);
+}
+
+/* This is for Dark theme */
+.dark {
+    --clr-color-background: #181a1e;
+    --clr-white: #202528;
+    --clr-light: rgba(0, 0, 0, 0.4);
+    --clr-dark: #edeffd;
+    --clr-dark-variant: #677483;
+    --box-shadow: 0 2rem 3rem var(--clr-light)
+}
+
+.dark h3 {
+    color: whitesmoke;
+}
+
+.dark h2 {
+    color: whitesmoke;
+}
+
+.AdminPanel {
+    background-color: var(--clr-color-background);
+    display: flex;
+    flex-direction: row;
+    width: 98%;
+    height: 100%;
+    margin: 0 auto; 
 }
