--- a/src/frontend/contactPage/Contact.css
+++ b/src/frontend/contactPage/Contact.css
@@ -7,8 +7,8 @@
     padding: 50px;
 }
 ::placeholder{
-    color: rgba(255, 38, 0, 0.801);
-    font-size: 15px;
+    /* color: rgba(255, 38, 0, 0.801); */
+    font-size: 12px;
 }
 .contact-left {
     display: flex;
